tests/positive/basic/startswith_false/input.ci
void main() {
    print(toString(startsWith("alpha", "ph")) + "\n");
}
