tests/negative/semantic/wrong_arg_count_epochtomonth/input.ci
void main() {
    print(toString(epochToMonth()) + "\n");
}
